--- a/Contact.html
+++ b/Contact.html
@@ -18,7 +18,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="indexmain.html" >Home</a></li>
+                <li><a href="index.html" >Home</a></li>
                 <li><a href="Guide.html" >Guide</a></li>
                 <li><a href="AboutUs.html" >About Us</a></li>
                 <li><a href="Contact.html" >Contact</a></li>
