--- a/WhatWeOffer.html
+++ b/WhatWeOffer.html
@@ -96,7 +96,7 @@
     <!-- Contact Section -->
 <section id="contact">
     <h2>Home</h2>
-    <form action="indexmain.html" method="get">
+    <form action="index.html" method="get">
         
         <button type="submit"><-Back</button>
     </form>
