--- a/create.html
+++ b/create.html
@@ -17,7 +17,7 @@
 <header>
   <nav>
     <ul>
-      <li><a href="indexmain.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="create.html">Create Server</a></li>
       <li><a href="server.html">Pricing</a></li>
     </ul>
