--- a/panel.html
+++ b/panel.html
@@ -110,7 +110,7 @@
   <h1>UnGodly Hosting</h1>
   <nav>
     <ul>
-      <li><a href="#">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="#server-panel">My Server Panel</a></li>
     </ul>
   </nav>
